<resources>
    <string name="app_name">scuolaguida</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="neededPermissions">sono richiesti alcuni permessi</string>
    <string name="grantPermission">consenti accesso ai permessi</string>
    <string name="insertEmail">inserisci email</string>
    <string name="insertPasswrod">inserisci password</string>
    <string name="goToRegister">non hai una account? registrati</string>
    <string name="login">login</string>
    <string name="insertPasswrodAgain">conferma la tua  password</string>
    <string name="goToLogin">hai già un account? Esegui il login</string>
    <string name="signup">registrati</string>
    <string name="menu_prenotazioni">prenotazioni</string>
    <string name="giorno">giorno :</string>
    <string name="capitolo">capitolo :</string>
    <string name="orario">orario :</string>
    <string name="email_input">email</string>
    <string name="logout">logout</string>
    <string name="menu_profilo">profilo</string>
    <string name="menu">MENÙ</string>
    <string name="prenotati">PRENOTATI</string>
    <string name="data">data :</string>
    <string name="rimuovi">elimina la tua prenotazione</string>
    <string name="cercaautoscuola">trova la scuola più vicina a te</string>
    <string name="maps">mappa</string>
    <string name="NUOVAPRENOTAZIONE">NUOVA PRENOTAZIONE</string>
    <string name="letueprenotazioni">LE TUE PRENOTAZIONI</string>
    <string name="patenteA">PATENTE A</string>
    <string name="patenteAB">PATENTE A-B</string>
    <string name="patenteb">PATENTE B</string>
    <string name="patentec">PATENTE C</string>
    <string name="capitolo1_patenteAB">cosa è un veicolo? come ci si comporta in strada? quali sono i segnali di pericolo?</string>
    <string name="capitolo2_patenteAB">segnali di divieto e segnali di precedenza </string>
    <string name="capitolo3_patenteAB">segnali di obbligo e segnali di indicazione</string>
    <string name="capitolo4_patenteAB">segnali temporanei, segnali complementari e pannelli integrativi </string>
    <string name="capitolo5_patenteAB">segnaletica luminosa, segnaletica manuale e segnaletica orizzontale </string>
    <string name="capitolo6_patenteAB">luci, specchi, dispositivi del veicolo e limiti di velocità </string>
    <string name="capitolo7_patenteAB">posizione dei veicoli sulla carreggiata, svolte e precedenza </string>
    <string name="capitolo8_patenteAB">sorpassi , fermate e soste dei veicoli </string>
    <string name="capitolo9_patenteAB">trasporto di persone, carichi e comportamento corretto del conducente </string>
    <string name="capitolo10_patenteAB">cause più frequenti di incidenti, patenti e documenti </string>
    <string name="capitolo11_patenteAB">tenuta di strada, manutenzione del veicolo, inquinamento e spie </string>
    <string name="capitolo12_patenteAB">veicoli a due ruote e veicoli con rimorchi </string>
    <string name="calendario">aggiungi al tuo calendario</string>
    <string name="argomento">argomento :</string>
    <string name="passwdimenticata">hai dimenticato la password? recuperala ora!</string>
    <string name="eliminaaccount">elimina account</string>
    <string name="gestisci">gestisci il tuo account</string>
    <string name="cambiapassw">vuoi cambiare la password? clicca qui!</string>
    <string name="impostazioni">impostazioni</string>
    <string name="tema">Vuoi impostare come lingua l\'inglese?</string>
    <string name="benvenuto">Benvenuto nella tua autoscuola!</string>
    <string name="titolo_prenotazione">PRENOTAZIONE EFFETTUATA</string>
    <string name="contenuto_prenotazione">La tua prenotazione è stata effettuata con successo!</string>
    <string name="titolo_aggiuntocalendario">LEZIONE AGGIUNTA A CALENDARIO</string>
    <string name="contenuto_calendario">La lezione è stata aggiunta correttamente al tuo calendario</string>
    <string name="titolo_elimina">LEZIONE ELIMINATA</string>
    <string name="contenuto_elimina">Sei sicuro di voler cancellare la tua prenotazione</string>
    <string name="titolo_logout">SEI SICURO DI VOLER FARE IL LOGOUT?</string>
    <string name="contenuto_logout">Verrai riportato alla schermata di login</string>
    <string name="titolo_eliminaaccount">ELIMINAZIONE ACCOUNT</string>
    <string name="contenuto_eliminaccount">Sei sicuro di voler eliminare il tuo account? L\'azione sarà irreversibile</string>
    <string name="titolo_cambiopassword">CAMBIO PASSWORD</string>
    <string name="contenuto_cambiopassword">Ti è stata inviata una email per reimpostare la tua password</string>
    <string name="select_language">Seleziona la lingua</string>
    <string-array name="languages">
        <item>"lingua:"</item>
        <item>Italiano</item>
        <item>Inglese</item>
    </string-array>
    <string name="Italiano">Italiano</string>
    <string name="Inglese">Inglese</string>
    <string name="select_theme">scegli il tema :</string>
    <string name="menu_pratica">lezioni di pratica</string>
    <string name="prenotazione_teoria">lezione di teoria</string>
    <string name="prenotazione_pratica">lezione di pratica</string>
    <string name="prenota_nuovalezione">prenotati ad una nuova lezione:</string>
    <string name="istruttore">istruttore :</string>
    <string name="veicolo">veicolo :</string>
    <string name="targa">targa :</string>
    <string name="patented">PATENTE D</string>
    <string name="latuaemail">la tua email :</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="esci">esci dalla applicazione</string>
    <string name="lezionedi">lezione di</string>
    <string name="per">per</string>
    <string name="capienza">posti disponibili :</string>
</resources>