<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_prenotazioni"
            android:icon="@drawable/baseline_playlist_add_circle_24"
            android:title="@string/menu_prenotazioni" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profilo"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profilo" />
    </group>
</menu>