<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scuolaguida.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_prenotazioni"
        android:name="com.example.scuolaguida.ui.prenotazioni.PrenotazioniFragment"
        android:label="@string/menu_prenotazioni"
        tools:layout="@layout/fragment_prenotazioni" />

    <fragment
        android:id="@+id/nav_profilo"
        android:name="com.example.scuolaguida.ui.profilo.ProfiloFragment"
        android:label="@string/menu_profilo"
        tools:layout="@layout/fragment_profilo" />
</navigation>