<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/insertEmail"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/insertEmail" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/insertPasswrod"
                android:autofillHints="@string/insertPasswrod" />

            <ImageView
                android:id="@+id/passwordVisibilityToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_visibility_24"
                android:padding="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/switchLoginToRegisterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToRegister"
            android:gravity="center"
            android:pointerIcon="hand"
            android:layout_margin="6dp"/>

        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </LinearLayout>

</FrameLayout>
