<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/red">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/email_input"
            android:textSize="22sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:background="@color/brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gestisci"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/cambiapassw"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:text="@string/cambiapassw"
                android:layout_marginTop="10dp" />
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white_smoke"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:text="@string/logout"
                android:layout_marginTop="5dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white_smoke"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/bottoneelimina"
                android:text="@string/eliminaaccount"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
