<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/insertEmail"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints="@string/insertEmail" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:hint="@string/insertPasswrod"
            android:autofillHints="@string/insertPasswrod" />
            />
        <ImageView
            android:id="@+id/passwordVisibilityToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/baseline_visibility_24"
            android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/userPasswordAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:hint="@string/insertPasswrodAgain"
            android:autofillHints="@string/insertPasswrod" />

            <ImageView
                android:id="@+id/passwordVisibilityToggle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/baseline_visibility_24"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/switchRegisterToLoginLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToLogin"
            android:gravity="center"
            android:pointerIcon="hand"
            android:layout_margin="6dp"/>

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>

    </LinearLayout>

</FrameLayout>